recallable/tests/ui/derive_fail_enum_recall_skip.stderr
error: enum `Recall` derive requires assignment-only variant fields; derive `Recallable` and implement `Recall` or `TryRecall` manually
 --> tests/ui/derive_fail_enum_recall_skip.rs:6:9
  |
6 | /         #[recallable(skip)]
7 | |         sticky: u8,
  | |__________________^
